# OpenScheduler

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  install-deps.sh
.github/workflows/: builg-all.yml  cmake-multi-platform.yml
client/: CMakeLists.txt  OpenScheduler.cpp  OpenScheduler.h  OpenScheduler.ui  main.cpp
client/widgets/login/: loginwidget.cpp  loginwidget.hpp  loginwidget.ui
cmake/: build_utils.cmake  mysql-connector-win.cmake
include/: Singleton.hpp  Singleton.ipp  compile_utils.h  utility.h
libs/: CMakeLists.txt
libs/config/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigParser.cpp  ConfigParser.hpp
libs/database/: Backend.cpp  Backend.hpp  Backend.ipp  CMakeLists.txt  Database.cpp  Database.hpp  Host.hpp
libs/database/backends/: CMakeLists.txt
libs/database/backends/mysql/: CMakeLists.txt  MySqlBackend.cpp  MySqlBackend.hpp
libs/database/table/: Dao.hpp  QueryProcessor.hpp  QueryProcessor.ipp  Table.hpp
libs/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
libs/login/: CMakeLists.txt  CredentialsDao.cpp  CredentialsDao.hpp  Login.cpp  Login.hpp  LoginContext.cpp  LoginContext.hpp
libs/login/utils/: utility.c  utility.h
libs/utils/: CMakeLists.txt
sql/: create_login.sql
test/: CMakeLists.txt
test/database/: .gitignore  CMakeLists.txt  TestDao.hpp  integration_database.cpp  mysql_config.hpp  test_database.cpp
test/logger/: CMakeLists.txt  test_logger.cpp
test/login/: CMakeLists.txt  test_hash_credentials.cpp
test/manual/: CMakeLists.txt  main.cpp
test/utils/: CMakeLists.txt  test_singleton.cpp
